--- a/chainFresh/products.html
+++ b/chainFresh/products.html
@@ -134,6 +134,7 @@
 
   <script src="https://kit.fontawesome.com/29ac3b55f2.js" crossorigin="anonymous"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+  <script src="js/papaparse.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
